# iso-audit

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  MEMORY.md  ONBOARDING.md  README.md  pyproject.toml  run-report.json
.claude/agents/: builder.md  reviewer.md  security.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  notifier-adapter.md  source-adapter.md
.github/workflows/: ci.yml
.habitat/: audit.jsonl  run-output-builder-apply-docs-contract-20260713-062231.md  run-output-builder-apply-docs-contract-20260713-072017.md  run-output-reviewer-apply-docs-contract-20260713-073217.md  run-report-builder-apply-docs-contract-20260713-062231.html  run-report-builder-apply-docs-contract-20260713-072017.html  run-report-reviewer-apply-docs-contract-20260713-073217.html
docs/: compensating-control.md  index.md  memo-architecture.md  miro-auditor-bord-prompt.md  miro-interview-prompt.md  missie.md  modes.md
docs/explanation/: compensating-control.md  memo-architecture.md  missie.md
docs/how-to/: miro-auditor-bord-prompt.md  miro-interview-prompt.md
docs/notifiers/: email.md  mattermost.md  slack.md  teams.md
docs/reference/: modes.md  notifier-email.md  notifier-mattermost.md  notifier-slack.md  notifier-teams.md  sinks.md  source-drive.md  source-jira.md  source-mcp.md  source-planning.md  source-rest.md
docs/sinks/: README.md
docs/sources/: drive.md  jira.md  mcp.md  planning.md  rest.md
examples/auditmemo/: conduction.profile.yaml  findings.json  historical_ncs.yaml  memo-input.yaml  minimal.example.yaml
examples/fixture-audit-2026-q1/: README.md  findings.csv  findings.expected.csv  generate_fixture.py
examples/norms/: iso-27001-2022.yaml  iso-9001-2015.yaml
openspec/changes/apply-docs-contract/: proposal.md  tasks.md
openspec/changes/archive/hww-2-0/: NOTE.md  design.md  tasks.md
openspec/changes/archive/miro-kennissessie-generator/: design.md  proposal.md  tasks.md
openspec/changes/archive/miro-write-trim/: design.md  proposal.md  tasks.md
openspec/changes/audit-rapport-management-taal/: proposal.md  tasks.md
openspec/changes/audit-rapport-management-taal/specs/report-generation/: spec.md
openspec/changes/auditmemo-management/: design.md  proposal.md  tasks.md
openspec/changes/auditmemo-management/specs/auditmemo/: spec.md
openspec/changes/auditmemo-management/specs/memo-profiles/: spec.md
openspec/changes/auditmemo-management/specs/norm-database/: spec.md
openspec/changes/auditmemo-ui/: design.md  proposal.md  tasks.md
openspec/changes/auditmemo-ui/specs/audit-api/: spec.md
openspec/changes/auditmemo-ui/specs/connector-orchestration/: spec.md
openspec/changes/auditmemo-ui/specs/memo-ui/: spec.md
openspec/changes/gsuite-iso-audit-automation/: design.md  proposal.md  tasks.md
openspec/changes/gsuite-iso-audit-automation/specs/audit-report-template/: spec.md
openspec/changes/gsuite-iso-audit-automation/specs/clause-mapping/: spec.md
openspec/changes/hww-2-0/: proposal.md
openspec/changes/hww-2-0/specs/hww-core-content/: spec.md
openspec/changes/miro-write-trim/: tasks.md
src/iso_audit/: __init__.py  __main__.py  auth.py  cli.py  ingest.py  interview.py  notification.py  pipeline.py  store.py  verify_docs.py
src/iso_audit/api/: __init__.py  app.py  run_job.py  session.py  ui.html
src/iso_audit/assets/: __init__.py
src/iso_audit/classification/: clause_mapping.py  findings.py  llm.py  thema.py
src/iso_audit/clients/: __init__.py  gws.py
src/iso_audit/data/: report_template_structure.yaml
src/iso_audit/data/clause_maps/: clause_map_27001.yaml  clause_map_9001.yaml
src/iso_audit/data/normteksten/: __init__.py  iso27001.py  iso9001.py
src/iso_audit/memo/: __init__.py  builder.py  classifier.py  cli.py  draft.py  models.py  norm_lookup.py  pattern_detection.py  protocols.py
src/iso_audit/memo/prompts/: nc_draft_v1.md  nc_draft_v2.md
src/iso_audit/memo/renderer/: __init__.py  html.py  pdf.py
src/iso_audit/memo/theme/: __init__.py  elicitation.py  profile.py  svg_validator.py
src/iso_audit/miro/: __init__.py  board_setup.py  client.py  ingest.py  interview.py
src/iso_audit/modes/: __init__.py  autonoom.py  base.py  integer.py
src/iso_audit/notifiers/: __init__.py  base.py  email.py  resolver.py  slack.py
src/iso_audit/reporting/: __init__.py  full_report.py  html_to_docx.py  html_to_pdf.py  landscape.py  local_report.py  make_pptx.py  md_to_html.py  report_generation.py  sheets_gws.py  slide_summary.py  tabular_report.py  template_setup.py
src/iso_audit/reporting/prompts/: aanbevelingen_v1.md  management_summary_v1.md
src/iso_audit/sinks/: __init__.py  base.py  drive.py
src/iso_audit/sources/: __init__.py  base.py  drive.py  jira.py  planning.py  protocol_ingest.py
tests/: conftest.py  test_auth.py  test_cli.py  test_ingest.py  test_interview.py  test_notification.py  test_pipeline.py  test_verify_docs.py
tests/api/: test_app.py  test_run_job.py
tests/classification/: test_clause_mapping.py  test_findings.py  test_findings_snapshot.py  test_llm.py  test_thema.py
tests/clients/: test_gws.py
tests/data/: test_normteksten.py
tests/memo/: test_classifier.py  test_draft.py  test_elicitation.py  test_integration.py  test_norm_lookup.py  test_profile.py  test_renderer.py  test_svg_validator.py
tests/miro/: test_board_setup.py  test_client.py  test_ingest.py  test_interview.py
tests/modes/: test_autonoom.py  test_integer.py
tests/notifiers/: test_email.py  test_protocol_contract.py  test_resolver.py  test_slack.py
tests/reporting/: test_full_report.py  test_html_to_docx.py  test_html_to_pdf.py  test_landscape.py  test_local_report.py  test_make_pptx.py  test_md_to_html.py  test_report_generation.py  test_sheets_gws.py  test_slide_summary.py  test_tabular_report.py  test_template_setup.py
tests/sinks/: test_drive.py  test_protocol_shape.py
tests/sources/: test_drive.py  test_jira.py  test_planning.py  test_protocol_contract.py  test_protocol_ingest.py
tests/store/: test_classifications.py  test_store.py
(+18 files in other folders)
