[project]
name = "iso-audit"
version = "0.1.0a0"
description = "ISO 9001 + 27001 audit pipeline with pluggable source-adapters and human-in-the-loop modes"
readme = "README.md"
authors = [
    { name = "Mark Westerweel", email = "mwesterweel@hotmail.com" },
]
requires-python = ">=3.12"
license = { text = "EUPL-1.2" }
keywords = ["iso", "audit", "iso27001", "iso9001", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Security",
]
dependencies = [
    "anthropic>=0.102.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.52.0",
    "htmldocx>=0.0.6",
    "markdown>=3.10.2",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.1",
    "typer>=0.26.7",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "jinja2>=3.1.6",
    "weasyprint>=69.0",
]

[project.scripts]
iso-audit = "iso_audit.cli:main"

[project.urls]
Repository = "https://github.com/MWest2020/iso-audit"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# --- Tooling ---

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, N: pep8-naming, UP: pyupgrade,
# B: bugbear, SIM: simplify, RUF: ruff-specific.
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]  # tests mogen lange assertion-strings hebben
# classification/findings.py heeft system-prompts (multi-line strings) waar
# regel-breken de prompt-tekst zou wijzigen. E501 specifiek voor deze file.
"src/iso_audit/classification/findings.py" = ["E501"]
# normteksten/ bevat letterlijke (verkorte) eisen uit ISO 9001:2015 en
# 27001:2022 — line-breaking is artificieel en RUF001 ambiguous-glyphs
# zoals × (multiplicatie) zijn legitiem in Nederlandse normtekst.
"src/iso_audit/data/normteksten/*.py" = ["E501", "RUF001"]
# make_pptx.py is een hardcoded MT-snapshot waarbij de presentatie-tekst
# verbatim moet blijven — line-breaking zou de inhoud wijzigen.
"src/iso_audit/reporting/make_pptx.py" = ["E501"]
# Typer vereist typer.Option/Argument-aanroepen in argument-defaults (B008 is
# hier een bekende false-positive); E501 voor de option-helpregels.
"src/iso_audit/memo/cli.py" = ["B008", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# google-api-python-client + google-auth: geen py.typed marker.
# htmldocx: kleine third-party zonder stubs; conversie-boundary is one-shot.
# openpyxl: stubs (`types-openpyxl`) bestaan maar zijn onvolledig voor de
# Workbook/cell API; ignore op de import-boundary is praktischer.
# pptx: python-pptx 1.x heeft type-annotaties zonder py.typed; mypy ziet
# RGBColor/Inches/Pt als untyped — niet relevant voor de snapshot-module.
# weasyprint: geen py.typed; conversie-boundary HTML→PDF is one-shot.
[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google.oauth2.*", "htmldocx", "openpyxl.*", "pptx.*", "weasyprint"]
ignore_missing_imports = true

# `make_pptx.py` is een snapshot-module die uitsluitend python-pptx-aanroepen
# bevat; mypy --strict's no-untyped-call slaat hier nergens op.
[[tool.mypy.overrides]]
module = "iso_audit.reporting.make_pptx"
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "contract: contract-tests die alle geregistreerde adapters van een protocol valideren",
    "snapshot: snapshot-tests met fixture-data; byte-identiek match vereist",
]

[tool.coverage.run]
source = ["iso_audit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.bandit]
# Skip B101 (assert) — pytest gebruikt assert
exclude_dirs = ["tests"]
skips = ["B101"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "types-markdown>=3.10.2.20260508",
    "types-pyyaml>=6.0.12.20260510",
    "types-requests>=2.33.0.20260513",
]
